# apu_filter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_DEEP_DIVE.md  ARCHIVES.md  BMC.md  GEMINI.md  LENGUAJE_CONSEJO.md  PRODUCT_VISION.md  README.md  SAGES.md  app.py  apus.csv  cartuchos_toon.md  check_imports.py  clean_podman.sh  compose.txt  compose.yaml  config.json  config.py  contratos_json.md  dump.rdb  environment.yml  fix_improbability_drive.py  fix_lipschitz.py  fix_omega.py  fix_omega_lever.py  fix_test_translator.py  fix_tests.py  fix_tests_rigorous.py  fix_translator.py  gobernanza_data_mesh.md  grammar_diagnosis.txt  insumos.csv  landing_page.html  landng_page_v2.html  passport.md  patch_all.py  patch_all2.py  (+124 more)
agent/: __init__.py  apu_agent.py  business_topology.py  orchestrator.py  podman_start_v8.txt  propuesta_apu_agent.txt  propuesta_business_topology.txt  propuesta_business_topology_v2.txt  propuesta_documentacion.txt  propuesta_documentacion_v2.txt  propuesta_documentacion_v3.txt  propuesta_metodos_apu_agent.txt  propuesta_telemetry_h.txt  propuesta_test_topological_analyer.txt  propuesta_test_topological_analyzer.txt  propuesta_topological_analyzer.txt  topological_analyzer.py
app/: MIC_agent.py  MIF.py  app.py  apu_processor.py  apu_processor.txt  business_agent.py  business_agent.txt  circuitos_RLC.md  clases_flux_condenser.txt  conda_v1.txt  conda_v12.txt  conda_v13.txt  conda_v14.txt  conda_v15.txt  conda_v16.txt  conda_v17.txt  conda_v18.txt  conda_v19.txt  conda_v2.txt  conda_v20.txt  conda_v21.txt  conda_v22.txt  conda_v23.txt  conda_v24.txt  conda_v25.txt  conda_v26.txt  conda_v27.txt  conda_v3.txt  conda_v4.txt  conda_v5.md  conda_v6.md  config.json  config.txt  constants.py  data_loader.py  data_validator.py  estimator.py  financial_engine.py  financial_engine.txt  flux_condenser.py  (+131 more)
apu_project.egg-info/: PKG-INFO  SOURCES.txt
config/: config_app.py  config_rules.json  data_contract.yaml  ontology.json
data/: apus.csv  apus_clean.csv  apus_ok.xls  insumos.xlsx  insumos_clean.csv  presupuesto_clean.csv
data_dirty/: presupuesto.xlsx
dev_tools/: diagnose_grammar.py  mic_minimizer.py  test_diagnose_grammar.py  test_mic_minimizer.py
docs/: Gobernanza_Data_Mesh.txt  propuesta_apu_processor.txt  propuesta_prototipo_flux_condenser.txt  propuesta_telemetry_h.txt
infrastructure/: Dockerfile.agent  Dockerfile.core  compose.yaml
logs/: podman_start.txt  podman_start_v10.txt  podman_start_v11.txt  podman_start_v12.txt  podman_start_v13.txt  podman_start_v14.txt  podman_start_v15.txt  podman_start_v16.txt  podman_start_v17.txt  podman_start_v18.txt  podman_start_v19.txt  podman_start_v2.txt  podman_start_v20.txt  podman_start_v21.txt  podman_start_v22.txt  podman_start_v23.txt  podman_start_v24.txt  podman_start_v25.txt  podman_start_v26.txt  podman_start_v27.txt  podman_start_v28.txt  podman_start_v29.txt  podman_start_v30.txt  podman_start_v31.txt  podman_start_v32.txt  podman_start_v5.txt  (+3 more)
(+752 files in other folders)
