[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 93
indent-width = 4

[tool.ruff.lint]
# Dejamos solo las reglas estándar para errores, advertencias e imports.
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[project]
name = "apu-project"
version = "0.1.0"

[tool.setuptools]
packages = ["app"]
