[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
    "categorical: categorical state tests",
    "order_theory: order theory tests",
    "unit: unit tests",
    "algebraic: algebraic tests",
    "regression: regression tests",
    "stress: stress tests",
]
filterwarnings = [
    "ignore:builtin type SwigPy.*:DeprecationWarning",
    "ignore:builtin type swigvarlink.*:DeprecationWarning",
]

[tool.ruff]
line-length = 93
indent-width = 4

[tool.ruff.lint]
# Dejamos solo las reglas estándar para errores, advertencias e imports.
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[project]
name = "apu-project"
version = "0.1.0"

[tool.setuptools]
packages = ["app"]
