[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "unit: Pruebas unitarias de funtores individuales (aislamiento estricto).",
    "integration: Pruebas de integración del pipeline completo (cohomología y funtores compuestos).",
    "stress: Casos adversariales bajo perturbaciones extremas (ruido de Cauchy, vuelos de Lévy).",
    "slow: Pruebas de convergencia asintótica y Monte Carlo que exigen alto tiempo computacional.",
    "categorical: Validación de axiomas de teoría de categorías (funtorialidad, adjunción).",
    "order_theory: Verificación de cadenas y retículos en la jerarquía DIKΩαW.",
    "physics: Evaluación del estrato base y ecuaciones de Maxwell discretizadas.",
    "tactics: Evaluación de topología algebraica, homología y números de Betti.",
    "strategy: Evaluación de teoría espectral de grafos y espacios de probabilidad.",
    "wisdom: Evaluación de difeomorfismos semánticos y colapso de retículos de veredictos.",
    "algebraic: algebraic tests",
    "regression: regression tests",
    "concurrent: concurrent tests",
    "edge_cases: edge case tests",
]
filterwarnings = [
    "ignore:builtin type SwigPy.*:DeprecationWarning",
    "ignore:builtin type swigvarlink.*:DeprecationWarning",
    "ignore:The 'use_signer' option is deprecated:DeprecationWarning:flask_session.*",
]

[tool.ruff]
line-length = 93
indent-width = 4

[tool.ruff.lint]
# Dejamos solo las reglas estándar para errores, advertencias e imports.
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[project]
name = "apu-project"
version = "0.1.0"

[tool.setuptools]
packages = ["app"]
